Jython NEWS

For more details of issue [ n ], please see https://hg.python.org/jython, or for tags [ GH-n ] see
https://github.com/jythontools/jython

Development tip
  Bugs fixed
    - [ 2732 ] Regression in large module support for pip
    - [ GH-131 ] Support Unicode in zxJDBC exceptions.
    - [ 2654 ] Imported modules allow access to submodules
    - [ 2362 ] Import * doesn't work on JDK9 for java.*, jdk.* namespaces
    - [ 2630 ] Cannot import java.awt.* on Java 9
    - [ 2663 ] Remove dependency on javax.xml.bind.DatatypeConverter
    - [ 2726 ] os.uname() throws IllegalArgumentException on Windows (Chinese localisation)
    - [ 2719 ] Divergence of __str__ and __repr__ from CPython
    - [ 2714 ] Locale and java version failures in test_os_jy
    - [ GH-111 ] Proper processing of gzip trailer without resubmission
    - [ 2231 ] __doc__ of PyString objects is always "The most base type"
    - [ 2230 ] Jython evaluation blocks under heavy load with high multi-core systems
    - [ 2506 ] ensurepip is reporting an error
    - [ 1609 ] Partial parsing does not work with function decorators
    - [ 2494 ] Support for pydoc_data
    - [ 2492 ] NPE for PythonInterpreter after new PyInteger
    - [ 2707 ] jython.py shebang line invalid on Linux
    - [ 1748 ] subprocess and os.system don't show output
    - [ 2343 ] PYTHONPATH is overwritten on Windows
    - [ 2346 ] Launcher not resilient to bad environment variable settings
    - [ 2709 ] test_chdir tolerates absent DOS 8.3 filename
    - [ 2706 ] Use python.path instead of JYTHONPATH
    - [ 2410 ] Regression in PySystemStateTest (leading slash)
    - [ 2639 ] Incorrect result when using != comparison against Java {List, Set, Map}
    - [ 2672 ] Integer formatting emits two minus signs with -2^31
    - [ 2688 ] ClassCastException when adding list of non-PyObjects
    - [ 2659 ] Determine console encoding without access violation (Java 9)